// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Disabling Tooltip 1`] = `
<WithStyles(ForwardRef(Fab))
  className="makeStyles-fab-1"
  color="primary"
>
  <Memo(ForwardRef(AccessAlarmIcon)) />
</WithStyles(ForwardRef(Fab))>
`;

exports[`Snapshot Testing Optional Props 1`] = `
<Memo()
  id="tooltip"
  title=""
>
  <WithStyles(ForwardRef(Fab))
    className="makeStyles-fab-1"
    color="primary"
    onClick={[MockFunction]}
  >
    <Memo(ForwardRef(AccessAlarmIcon)) />
  </WithStyles(ForwardRef(Fab))>
</Memo()>
`;

exports[`Snapshot Testing Required Props 1`] = `
<Memo()
  title="Sample"
>
  <WithStyles(ForwardRef(Fab))
    className="makeStyles-fab-1"
    color="primary"
    onClick={[MockFunction]}
  >
    <Memo(ForwardRef(AccessAlarmIcon)) />
  </WithStyles(ForwardRef(Fab))>
</Memo()>
`;
